# keypering

./: .editorconfig  .eslintignore  .eslintrc.json  README.md  config-overrides.js  package-lock.json  package.json
.storybook/: config.js
doc/: keypering_protocol_cn.md
public/: index.html  manifest.json
src/: App.css  App.tsx  ant.less  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  keystore.rs  main.rs
src/pages/authorization_request_page/: index.tsx
src/pages/change_password_page/: index.tsx
src/pages/change_wallet_name_page/: index.tsx
src/pages/create_wallet_page/: create_wallet_page.module.scss  index.tsx
src/pages/delete_wallet_page/: index.tsx
src/pages/home_page/: home.module.scss  index.tsx
src/pages/import_keystore_page/: index.tsx
src/pages/import_wallet_page/: index.tsx
src/pages/setting_page/: index.tsx
src/pages/transaction_request_page/: index.tsx  transaction_request.module.scss
src/pages/transfer_capacity_page/: index.tsx  transfer_capacity.module.scss
src/pages/welcome_page/: index.tsx  welcome.module.scss
src/services/: indexer.tsx  keypering_server.ts  messaging.ts  misc.js  rpc.js  storage.tsx  wallet.js  wallet.ts
src/widgets/: common.module.scss
src/widgets/address/: address.module.scss  index.tsx
src/widgets/address_list/: address_list.module.scss  index.tsx
src/widgets/authorization/: authorization.module.scss  index.tsx
src/widgets/authorization_list/: authorization_list.module.scss  index.tsx
src/widgets/authorization_request/: authorization_request.module.scss  index.tsx
src/widgets/page/: index.tsx  (+1 more)
(+20 files in other folders)
