[package]
name = "keypering"
version = "0.1.0"
description = "a nervos CKB desktop wallet for dApp interaction"
authors = [ "liusong1111@gmail.com" ]
license = "MIT"
repository = ""
default-run = "keypering"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.7.4", features = [ "all-api", "edge", "cli" ] }
tauri-api = "0.7.1"
ws = "0.9.1"
scrypt = "0.3.0"
rand = "0.7.3"
aes-ctr = "0.4.0"
uuid = { version = "0.8.1", features = [ "v4", "serde" ] }
stream-cipher = "0.4.1"
serde-hex = "0.1.0"
blake2 = "0.9.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "keypering"
path = "src/main.rs"
